Mejoras estéticas de Artistas y Albumes